# omni-demo2

./: README.md  api_server.py  audio_agent.py  hello.py  pyproject.toml  requirements.txt  test_agent.py  welcome.txt
static/: index.html
